# Conversation-Fact-Benchmark

./: .gitignore  README.md  main.py  pyproject.toml  setup_datasets.sh  setup_msc_dataset.py
data_models/: dream.py  msc.py  response.py  truthful_qa.py
data_processing/dream/: combine_datasets.py  transform.py
data_processing/msc/: transform.py
data_processing/truthful_qa/: transform.py
llm/: __init__.py  ollama.py  openrouter.py
notebooks/: results.ipynb
prompts/: prompt_manager.py  utils.py
prompts/templates/: dialog_qa_system.j2  dialog_qa_user.j2  msc_qa_system.j2  msc_qa_user.j2  truthful_qa_system.j2  truthful_qa_user.j2
