[project]
name = "conversation-fact-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub[cli]>=0.33.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "litellm>=1.73.2",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "outlines>=1.0.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-frontmatter>=1.1.0",
    "seaborn>=0.13.2",
]
